# RentalAgent

./: .gitignore  AGENTS.md  github-main-ruleset.json  pyproject.toml  student-rental-agent-prototype-spec.md
.github/: pull_request_template.md
docs/: pr-review-gate-workflow.yml
src/rental_agent/: __init__.py  campus.py  comparison.py  enrichment.py  ranking.py  renderer.py  retrieval.py  sources.py  state.py
tests/: test_campus.py  test_comparison.py  test_enrichment.py  test_ranking.py  test_renderer.py  test_retrieval.py  test_sources.py  test_state.py
