[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "student-rental-agent"
version = "0.1.0"
description = "Prototype runtime for the Student Rental Agent."
readme = "student-rental-agent-prototype-spec.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
